src/App.css
#root {
  display: flex;
  height: 100svh;
}

.viewer {
  box-sizing: border-box;
  height: 100%;
  width: 30vw;
  padding: 0 1rem;
  display: flex;
  flex-direction: column;
  justify-content: start;
  overflow: hidden;
}

.controls {
  position: absolute;
  left: var(--controls-left, 72px);
  bottom: 5px;
  display: flex;
  gap: 5px;
  align-items: flex-start;
  flex-direction: column-reverse;
  opacity: 0.7;
  transition: opacity ease-in 250ms;
  z-index: 10;
}
@media (max-width: 640px) {
  .controls {
    left: 14px;
  }
}

.controls:hover {
  opacity: 1;
}
.controls button {
  padding: 3px;
  width: 30px;
  height: 30px;
  border-radius: 3px;
  outline: none;
}

.left-side-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
}

.ReactModalPortal {
  font-size: var(--smaller-font-size);
}

.ReactModal__Overlay {
  background: light-dark(rgba(255, 255, 255, 0.5), rgba(32, 32, 32, 0.75));
}

.ReactModal__Content {
  background: var(--sidebar);
  /* border-color: light-dark(rgba(204, 204, 204), #111) !important; */
  border-color: light-dark(rgba(204, 204, 204), #666);
}

.narrow-layout {
  position: relative;
  height: calc(100svh - var(--header-height));
  width: 100vw;
  padding-bottom: 44px;
}

